--- a/src/client/src/theme/palatte.css
+++ b/src/client/src/theme/palatte.css
@@ -1,15 +1,10 @@
-.darkPrimaryColor { background: #616161; }
-
-.defaultPrimaryColor { background: #9e9e9e; }
-
-.lightPrimaryColor { background: #f5f5f5; }
-
-.textPrimaryColor { color: #212121; }
-
-.accentColor { background: #ffc107; }
-
-.primaryTextColor { color: #212121; }
-
-.secondaryTextColor { color: #757575; }
-
-.dividerColor { border-color: #bdbdbd; }
+:root {
+    --darkPrimaryColor: #616161;
+    --defaultPrimaryColor: #9e9e9e;
+    --lightPrimaryColor: #f5f5f5;
+    --textPrimaryColor: #212121;
+    --accentColor: #ffc107;
+    --primaryTextColor: #212121;
+    --secondaryTextColor: #757575;
+    --dividerColor: #bdbdbd;
+}
