--- a/src/client/src/components/loading.css
+++ b/src/client/src/components/loading.css
@@ -1,6 +1,5 @@
-@import '../theme/palatte.css';
-
 .container {
+    padding: 16px;
     text-align: center;
 }
 
@@ -11,12 +10,11 @@
 }
 
 .dot {
-    background-color: var(--defaultPrimaryColor);
     height: 10px;
     width: 10px;
     margin: 5px;
     border-radius: 50%;
-    animation: bounce 1s ease infinite;
+    animation: bounce 1s ease-in-out infinite;
 }
 
 .dot:nth-child(1) {
